<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#113061"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_welcome"
        tools:context=".MainActivity">
    <!--
    <LinearLayout
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:background="@drawable/gradient"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_height="0dp" android:id="@+id/linearLayout">
    </LinearLayout>
    -->
    <TextView
            android:text="@string/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:textSize="34sp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/welcome_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:alpha="0.6"
            android:fontFamily="sans-serif-light"
            android:textSize="23sp"
            android:id="@+id/subtitle"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/splash" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/splash" android:id="@+id/imageView"/>
    <Button
            android:text="@string/welcome_prerequisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prerequisite"
            android:textColor="#ffffff"
            android:background="#00FFFFFF"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/welcome_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/footer"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-medium"
            android:textSize="17sp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/prerequisite" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>