<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#113061"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_tab"
        tools:context=".TabActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:id="@+id/linearLayout">
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/splash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="0.67"
                android:scaleType="centerCrop"
                android:contentDescription="@string/splash"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_weight="0.33"
                android:orientation="vertical">
            <TextView
                    android:text="@string/tonight_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/title"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:textColor="#FF000000"/>
            <TextView
                    android:text="@string/tonight_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle"
                    android:fontFamily="sans-serif"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:textColor="#FF000000"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loading"
                    android:visibility="invisible"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="#00000000"
                    android:gravity="center_horizontal">
                <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_evening"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/evening"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:background="#00000000">
                    <TextView
                            android:text="@string/tonight_disruptions"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/disruptions"
                            app:layout_constraintBottom_toTopOf="@+id/longestRest"
                            android:textAlignment="center"
                            android:textColor="#FF000000"
                            android:textSize="17sp"/>
                    <TextView
                            android:id="@+id/longestRest"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tonight_longest_rest"
                            android:textAlignment="center"
                            android:textColor="#FF000000"
                            android:textSize="17sp"/>
                    <TextView
                            android:text="@string/tonight_unrest"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/unrest"
                            app:layout_constraintTop_toBottomOf="@+id/longestRest"
                            android:textAlignment="center"
                            android:textColor="#FF000000"
                            android:textSize="17sp"/>
                </LinearLayout>
                <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_morning"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/morning"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/main_bottom_navigation"
            app:itemTextColor="#FFA2A2A2"
            app:itemIconTint="#FFA2A2A2"
            android:background="#FFFFFFFF">
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#FFA2A2A2">
        </View>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>