<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#113061"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_request_access"
        tools:context=".RequestAccessActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:id="@+id/linearLayout">
    </LinearLayout>
    <TextView
            android:text="@string/request_access_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:textSize="34sp"
            android:id="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/lock"/>
    <ImageView
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/ic_request_access"
            android:id="@+id/lock"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/intro"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/request_access_lock"/>
    <TextView
            android:layout_weight="1"
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"
            android:text="@string/request_access_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:textSize="17sp"
            android:id="@+id/intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    <Button
            android:text="@string/ok"
            android:id="@+id/button"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/white"
            android:textColor="#006488"/>
</androidx.constraintlayout.widget.ConstraintLayout>