<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#113061"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_configure"
        tools:context=".ConfigureActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:id="@+id/linearLayout">
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/splash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="0.67"
                android:scaleType="centerCrop"
                android:contentDescription="@string/splash"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_weight="0.33"
                android:orientation="vertical">
            <TextView
                    android:text="@string/configure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/title"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:textColor="#FF000000"/>
            <TextView
                    android:text="@string/configure_weekdays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle"
                    android:fontFamily="sans-serif"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:textColor="#FF000000"
                    android:paddingTop="10dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#00000000"
                    android:gravity="center_horizontal"
            >
                <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_evening"
                        android:id="@+id/weekday_evening"
                        android:contentDescription="@string/evening"
                        android:background="#FFFFFFFF"
                        android:scaleType="fitCenter"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/spacer"
                        android:layout_weight="1"/>
                <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_morning"
                        android:id="@+id/weekday_morning"
                        android:contentDescription="@string/morning"
                        android:background="#FFFFFFFF"
                        android:scaleType="fitCenter"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#00000000"
                    android:gravity="center_horizontal" android:paddingBottom="10dp">
                <TextView
                        android:text="00:00"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:id="@+id/weekday_evening_time"
                        android:contentDescription="@string/evening"
                        android:scaleType="fitCenter"
                        android:textSize="17sp"
                        android:textColor="#FF000000"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/spacer5"
                        android:layout_weight="1"/>
                <TextView
                        android:text="00:00"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/weekday_morning_time"
                        android:contentDescription="@string/morning"
                        android:scaleType="fitCenter"
                        android:textSize="17sp"
                        android:textColor="#FF000000"/>
            </LinearLayout>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9A9A9A"
            />
            <TextView
                    android:text="@string/configure_weekends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle2"
                    android:fontFamily="sans-serif"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:textColor="#FF000000"
                    android:paddingTop="10dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#00000000"
                    android:gravity="center_horizontal">
                <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_evening"
                        android:id="@+id/weekend_evening"
                        android:contentDescription="@string/evening"
                        android:background="#FFFFFFFF"
                        android:scaleType="fitCenter"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/spacer2"
                        android:layout_weight="1"/>
                <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_morning"
                        android:id="@+id/weekend_morning"
                        android:contentDescription="@string/morning"
                        android:background="#FFFFFFFF"
                        android:scaleType="fitCenter"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#00000000"
                    android:gravity="center_horizontal">
                <TextView
                        android:text="00:00"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:id="@+id/weekend_evening_time"
                        android:contentDescription="@string/evening"
                        android:scaleType="fitCenter"
                        android:textSize="17sp"
                        android:textColor="#FF000000"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/spacer4"
                        android:layout_weight="1"/>
                <TextView
                        android:text="00:00"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/weekend_morning_time"
                        android:contentDescription="@string/morning"
                        android:scaleType="fitCenter"
                        android:textSize="17sp"
                        android:textColor="#FF000000"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/spacer3"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/ok"
                    android:id="@+id/ok"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>